--- a/math252-selected-homework-solutions.html
+++ b/math252-selected-homework-solutions.html
@@ -1778,14 +1778,14 @@ jQuery(document).ready(function($) {
 \end{align}$$</p>
 <h2>Section 5.2p2, #2</h2>
 <p><img alt="Alt text" src="images/sec5.2p3n1.png" /></p>
-<p>In this problem, $R_n$ represents $\sum_{i=1}^n f(x_i)\Delta x$, where $x_i$ is the right endpoint of the $i$ th subinterval and $f(x) = \frac{1}{2}\,x^2 + 4.$</p>
-<p>We partition the interval of integration $[0, 2]$ into $n$ subintervals, each of width $\Delta x = \frac{2 - 0}{n} = \frac{2}{n}$. Since the left endpoint of the interval of integration is 0, the coordinate of the right endpoint of the $i$ th subinterval, $x_i$, is given by $x_i = i \Delta x = \frac{2i}{n}$.</p>
+<p>In this problem, $R_n$ represents $\sum_{i=1}^n f(x_i)\Delta x$, where $x_i$ is the right endpoint of the $i$ th subinterval and $f(x) = -\frac{1}{2}\,x^2 + 4.$</p>
+<p>We partition the interval of integration $[0, 3]$ into $n$ subintervals, each of width $\Delta x = \frac{3 - 0}{n} = \frac{3}{n}$. Since the left endpoint of the interval of integration is 0, the coordinate of the right endpoint of the $i$ th subinterval, $x_i$, is given by $x_i = i \Delta x = \frac{3i}{n}$.</p>
 <p>The value of $f$ at the right endpoint of the $i$ th subinterval is given by
-\[f(x_i) = \frac{1}{2}\left(\frac{2i}{n}\right)^2 + 4 = \frac{2i^2}{n^2} + 4\]</p>
+\[f(x_i) = -\frac{1}{2}\left(\frac{3i}{n}\right)^2 + 4 = -\frac{9i^2}{2n^2} + 4\]</p>
 <p>Putting this all together, we have
-\[ R_n = \sum_{i=1}^n f(x_i)\Delta x = \sum_{i=1}^n \left(\frac{2i^2}{n^2} + 4\right)\frac{2}{n}\]</p>
-<p>We now need to use the various properties of sums to express $R_n$ as a function of $n$ (without the summation sign.) We can start by factoring out the $\frac{2}{n}$ factor, since for a given value of $n$ it is a constant. Doing this gives
-\[ R_n = \frac{2}{n}\sum_{i=1}^n \left(\frac{2i^2}{n^2} + 4\right) \]</p>
+\[ R_n = \sum_{i=1}^n f(x_i)\Delta x = \sum_{i=1}^n \left(-\frac{9i^2}{2n^2} + 4\right)\frac{3}{n}\]</p>
+<p>We now need to use the various properties of sums to express $R_n$ as a function of $n$ (without the summation sign.) We can start by factoring out the $\frac{3}{n}$ factor, since for a given value of $n$ it is a constant. Doing this gives
+\[ R_n = -\frac{3}{n}\sum_{i=1}^n \left(\frac{9i^2}{2n^2} + 4\right) \]</p>
 <p>Continue using properties of sums to simplify this expression and we will be done with the first part of the problem.</p><script type= "text/javascript">
     if (!document.getElementById('mathjaxscript_pelican_#%@#$@#')) {
         var mathjaxscript = document.createElement('script');
