--- a/math252-selected-homework-solutions.html
+++ b/math252-selected-homework-solutions.html
@@ -1777,7 +1777,7 @@ jQuery(document).ready(function($) {
     \end{split}
 \end{align}$$</p>
 <h2>Section 5.2p2, #2</h2>
-<p><img alt="Alt text" src="images/sec5.2p3n1.png" /></p>
+<p><img alt="Alt text" src="images/sec5.2p3n1.png" title="Problem 1, section 5.2p3" /></p>
 <p>In this problem, $R_n$ represents $\sum_{i=1}^n f(x_i)\Delta x$, where $x_i$ is the right endpoint of the $i$ th subinterval and $f(x) = -\frac{1}{2}\,x^2 + 4.$</p>
 <p>We partition the interval of integration $[0, 3]$ into $n$ subintervals, each of width $\Delta x = \frac{3 - 0}{n} = \frac{3}{n}$. Since the left endpoint of the interval of integration is 0, the coordinate of the right endpoint of the $i$ th subinterval, $x_i$, is given by $x_i = i \Delta x = \frac{3i}{n}$.</p>
 <p>The value of $f$ at the right endpoint of the $i$ th subinterval is given by
@@ -1788,7 +1788,7 @@ jQuery(document).ready(function($) {
 \[ R_n = -\frac{3}{n}\sum_{i=1}^n \left(\frac{9i^2}{2n^2} + 4\right) \]</p>
 <p>Continue using properties of sums to simplify this expression and we will be done with the first part of the problem.</p>
 <h2>Section 5.2p2, #1</h2>
-<p><img alt="Alt text" src="images/sec5.2p2n1.png" /></p>
+<p><img alt="Alt text" src="images/sec5.2p2n1.png" title="Problem 1, section 5.2p2" /></p>
 <p>In this problem we are given the terms of the Riemann sum of some function $f(x)$ over some interval $[a, b]$. From the form of the terms we are to determine the function $f$ and the upper limit of integration $b$. To do this we compare the form of the given terms with those in the definition of the definite integral of a function $f$ over an interval $[a, b]$,</p>
 <p>$$
 \begin{align}
@@ -1808,7 +1808,7 @@ $$</p>
 </ul>
 <p>From this we can relate $\Delta x$ to $\frac{5}{n}$. Since $\Delta x = \frac{b - a}{n}$ and we know that $a = 1$ (it is the left endpoint of the interval of integration), we conclude that $b = 6$.</p>
 <p>Finally, we see that the factors of $\Delta x$ in the Riemann sum must be </p>
-<p>\[f(x_i) = f(a + i\Delta x) = f(1 + i(5/n)) = \frac{1}{1 + i(5/n)}\]</p>
+<p>\[ f(x_i) = f(a + i\Delta x) = f(1 + i(5/n)) = \frac{1}{1 + i(5/n)} \]</p>
 <p>Hence, $f(x) = \frac{1}{x}$.</p><script type= "text/javascript">
     if (!document.getElementById('mathjaxscript_pelican_#%@#$@#')) {
         var mathjaxscript = document.createElement('script');
