--- a/math252-selected-homework-solutions.html
+++ b/math252-selected-homework-solutions.html
@@ -1788,7 +1788,7 @@ jQuery(document).ready(function($) {
 \[ R_n = -\frac{3}{n}\sum_{i=1}^n \left(\frac{9i^2}{2n^2} + 4\right) \]</p>
 <p>Continue using properties of sums to simplify this expression and we will be done with the first part of the problem.</p>
 <h2>Section 5.2p2, #1</h2>
-<p><img alt="Alt text" src="images/sec5.2p3n1.png" title="Problem 1, section 5.2p2" /></p>
+<p><img alt="Alt text" src="images/sec5_2p2n1.png" title="Problem 1, section 5.2p2" /></p>
 <p>In this problem we are given the terms of the Riemann sum of some function $f(x)$ over some interval $[a, b]$. From the form of the terms we are to determine the function $f$ and the upper limit of integration $b$. To do this we compare the form of the given terms with those in the definition of the definite integral of a function $f$ over an interval $[a, b]$,</p>
 <p>$$
 \begin{align}
