Refactored solution to problem #5 section 6.1 solution

--- a/math252_section6_1_number_5_solution.html
+++ b/math252_section6_1_number_5_solution.html
@@ -1798,14 +1798,12 @@ to 343/300.</p>
 =\frac{5}{6}$$</p>
 <p>Now combine the fractions in the brackets and simplify to get</p>
 <p>$$\left(\frac{7-m}{5}\right)^2\left[\frac{7-m}{6}\right] = \frac{343}{300}$$</p>
-<p>Rewrite the fraction in the bracket as $\left(\frac{7-m}{5}\right)\cdot\frac{5}{6}$, so that we can combine the fractions into a cube power, thus</p>
-<p>$$ \left(\frac{7-m}{5}\right)^3\cdot\frac{5}{6} = \frac{343}{300}$$</p>
-<p>Solve for the cube, then take the cube root to get</p>
-<p>$$ \frac{7 - m}{5} = \sqrt[3]{\frac{343}{250}} = \frac{7}{5\sqrt[3]{2}} =
-\frac{7\sqrt[3]{4}}{10}$$</p>
-<p>(The last two equalities were simplifying the radical expression.)</p>
-<p>Finally, solving for the slope $m$, we get</p>
-<p>$$m = 7 - \frac{7\sqrt[3]{4}}{2} \approx 1.4441 $$</p>
+<p>Multiplying out the left hand side, then multiplying through by 150 gives</p>
+<p>$$(7 - m)^3 = \frac{343}{2}$$</p>
+<p>Finally, taking cube roots and solving for $m$ gives</p>
+<p>$$ m = 7 - \sqrt[3]{\frac{343}{2}}
+= 7 - \frac{\sqrt[3]{343}}{\sqrt[3]{2}}
+= 7 - \frac{7}{\sqrt[3]{2}} = 7 - \frac{7\sqrt[3]{4}}{2} \approx 1.4441$$</p>
 <p>TADA!!</p><script type= "text/javascript">
     if (!document.getElementById('mathjaxscript_pelican_#%@#$@#')) {
         var mathjaxscript = document.createElement('script');
